# Bank-Statement-Pro

./: app.py  pyproject.toml  replit.md  test_categorization.py
attached_assets/: Pasted-2025-06-16-14-27-45-439-Uncaught-app-execution-Traceback-most-recent-call-last-File-home-ru-1750084167016_1750084167017.txt  Pasted-TypeError-list-object-is-not-a-mapping-Traceback-File-home-runner-workspace-pythonlibs-lib--1750085865691_1750085865692.txt  Pasted-ValueError-unconverted-data-remains-when-parsing-with-format-Y-d-m-0-at-position-2-You-mi-1750086152158_1750086152160.txt  Pasted-ValueError-unconverted-data-remains-when-parsing-with-format-Y-d-m-0-at-position-2-You-mi-1750087646172_1750087646173.txt  Pasted-def-analyze-narration-with-ai-self-narration-str-dict-Use-AI-to-analyze-narration-and-1750100232640_1750100232643.txt  Pasted-streamlit-errors-StreamlitAPIException-st-session-state-transaction-editor-cannot-be-modified-after-1750094724229_1750094724233.txt  bankanalysis_1750087506791.py
data/: audit_log.json  categories.json  categorization_cache.json  category_types.json  custom_categories.json  default_categories.json  metadata.json  transactions.csv  users.db
data/users/abc/: categories.json  categorization_cache.json  category_types.json  custom_categories.json  default_categories.json  metadata.json  transactions.csv
data/users/mp08/: categories.json  metadata.json  (+5 more)
utils/: ai_categorizer.py  audit_logger.py  auth_manager.py  category_manager.py  chart_generator.py  data_manager.py  excel_processor.py  pdf_processor.py  rules_engine.py  transaction_parser.py
