[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "openai>=1.86.0",
    "pandas>=2.3.0",
    "pdfplumber>=0.11.7",
    "plotly>=6.1.2",
    "pypdf2>=3.0.1",
    "python-levenshtein>=0.27.1",
    "streamlit>=1.45.1",
    "together>=1.5.15",
]
